--- a/wp-content/themes/stolar/dev/css/style.scss
+++ b/wp-content/themes/stolar/dev/css/style.scss
@@ -22,19 +22,37 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 *!
 */
 @import "mixins";
+/*
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+*/
+
 @import "t-misc";
+
 /*
   ---------------------------------------------------------------------------------
   ---------------------------------------------------------------------------------
   ---------------------------------------------------------------------------------
 */
+
 @import "t-style";
+
 /*
 ---------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------
 ---------------------------------------------------------------------------------
 */
+
 @import "smooth-menu";
+
+/*
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+*/
+
+@import "widget";
 
 /*
   ---------------------------------------------------------------------------------
@@ -270,7 +288,7 @@ fieldset {
 
 /* Generated with Bounce.js. Edit at http://goo.gl/wlGEaI */
 
-@-webkit-keyframes animation-button {
+/*@-webkit-keyframes animation-button {
   0% {
     -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
@@ -450,7 +468,7 @@ fieldset {
     -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
   }
-}
+}*/
 
 .open > .dropdown-menu {
   min-width: 100% !important;
