--- a/wp-content/themes/stolar/dev/css/style.scss
+++ b/wp-content/themes/stolar/dev/css/style.scss
@@ -39,12 +39,12 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "t-style";
 
 /*
----------------------------------------------------------------------------------
----------------------------------------------------------------------------------
----------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
 */
 
-@import "smooth-menu";
+@import "widget";
 
 /*
   ---------------------------------------------------------------------------------
@@ -52,7 +52,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ---------------------------------------------------------------------------------
 */
 
-@import "widget";
+@import "swipebox";
 
 /*
   ---------------------------------------------------------------------------------
@@ -741,4 +741,12 @@ fieldset {
       font-size: 2em;
     }
   }
+}
+
+.carousel-indicators{
+  z-index: 3 !important;
+}
+
+.navbar-static-top{
+  z-index:5 !important;
 }
