--- a/wp-content/themes/stolar/dev/css/_mixins.scss
+++ b/wp-content/themes/stolar/dev/css/_mixins.scss
@@ -32,6 +32,6 @@ $l: 1200px;
     @media only screen and (min-width: s + 1) and (max-width: m - 1) { @content; }
   }
   @else if $media == l {
-    @media only screen and (min-width: l - 1) { @content; }
+    @media only screen and (max-width: l - 1) { @content; }
   }
 }
