--- a/wp-content/themes/stolar/dev/css/style.scss
+++ b/wp-content/themes/stolar/dev/css/style.scss
@@ -21,6 +21,8 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 *!
 */
+$main-red: #DF314D;
+
 @import "mixins";
 /*
   ---------------------------------------------------------------------------------
@@ -46,6 +48,14 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ---------------------------------------------------------------------------------
 */
 @import "swipebox";
+
+/*
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+  ---------------------------------------------------------------------------------
+*/
+
+@import "aside";
 
 /*
   ---------------------------------------------------------------------------------
@@ -320,190 +330,6 @@ fieldset {
   animation: animation-button 2000ms linear both;
 
 }
-
-/* Generated with Bounce.js. Edit at http://goo.gl/wlGEaI */
-
-/*@-webkit-keyframes animation-button {
-  0% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-  }
-  1.45% {
-    -webkit-transform: matrix3d(4.281, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -230.151, 0, 0, 1);
-    transform: matrix3d(4.281, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -230.151, 0, 0, 1);
-  }
-  2.85% {
-    -webkit-transform: matrix3d(5.027, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -170.864, 0, 0, 1);
-    transform: matrix3d(5.027, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -170.864, 0, 0, 1);
-  }
-  4.1% {
-    -webkit-transform: matrix3d(4.66, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-    transform: matrix3d(4.66, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-  }
-  5.31% {
-    -webkit-transform: matrix3d(3.928, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -90.024, 0, 0, 1);
-    transform: matrix3d(3.928, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -90.024, 0, 0, 1);
-  }
-  7.71% {
-    -webkit-transform: matrix3d(2.402, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -38.032, 0, 0, 1);
-    transform: matrix3d(2.402, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -38.032, 0, 0, 1);
-  }
-  8.11% {
-    -webkit-transform: matrix3d(2.194, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-    transform: matrix3d(2.194, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-  }
-  10.11% {
-    -webkit-transform: matrix3d(1.423, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -7.741, 0, 0, 1);
-    transform: matrix3d(1.423, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -7.741, 0, 0, 1);
-  }
-  12.11% {
-    -webkit-transform: matrix3d(1.041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-    transform: matrix3d(1.041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-  }
-  12.51% {
-    -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 7.216, 0, 0, 1);
-    transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 7.216, 0, 0, 1);
-  }
-  15.37% {
-    -webkit-transform: matrix3d(1.108, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.845, 0, 0, 1);
-    transform: matrix3d(1.108, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.845, 0, 0, 1);
-  }
-  16.12% {
-    -webkit-transform: matrix3d(1.104, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-    transform: matrix3d(1.104, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-  }
-  25.03% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.133, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.133, 0, 0, 1);
-  }
-  27.23% {
-    -webkit-transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-    transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-  }
-  27.88% {
-    -webkit-transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1.934, 0, 0, 1);
-    transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1.934, 0, 0, 1);
-  }
-  37.54% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.307, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.307, 0, 0, 1);
-  }
-  38.34% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-  }
-  40.39% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.285, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.285, 0, 0, 1);
-  }
-  50% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-  }
-  60.56% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-  }
-  82.78% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-  }
-  100% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-  }
-}
-
-@keyframes animation-button {
-  0% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -300, 0, 0, 1);
-  }
-  1.45% {
-    -webkit-transform: matrix3d(4.281, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -230.151, 0, 0, 1);
-    transform: matrix3d(4.281, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -230.151, 0, 0, 1);
-  }
-  2.85% {
-    -webkit-transform: matrix3d(5.027, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -170.864, 0, 0, 1);
-    transform: matrix3d(5.027, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -170.864, 0, 0, 1);
-  }
-  4.1% {
-    -webkit-transform: matrix3d(4.66, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-    transform: matrix3d(4.66, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -125.912, 0, 0, 1);
-  }
-  5.31% {
-    -webkit-transform: matrix3d(3.928, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -90.024, 0, 0, 1);
-    transform: matrix3d(3.928, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -90.024, 0, 0, 1);
-  }
-  7.71% {
-    -webkit-transform: matrix3d(2.402, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -38.032, 0, 0, 1);
-    transform: matrix3d(2.402, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -38.032, 0, 0, 1);
-  }
-  8.11% {
-    -webkit-transform: matrix3d(2.194, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-    transform: matrix3d(2.194, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -31.647, 0, 0, 1);
-  }
-  10.11% {
-    -webkit-transform: matrix3d(1.423, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -7.741, 0, 0, 1);
-    transform: matrix3d(1.423, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -7.741, 0, 0, 1);
-  }
-  12.11% {
-    -webkit-transform: matrix3d(1.041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-    transform: matrix3d(1.041, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 5.53, 0, 0, 1);
-  }
-  12.51% {
-    -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 7.216, 0, 0, 1);
-    transform: matrix3d(1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 7.216, 0, 0, 1);
-  }
-  15.37% {
-    -webkit-transform: matrix3d(1.108, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.845, 0, 0, 1);
-    transform: matrix3d(1.108, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 12.845, 0, 0, 1);
-  }
-  16.12% {
-    -webkit-transform: matrix3d(1.104, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-    transform: matrix3d(1.104, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 13.007, 0, 0, 1);
-  }
-  25.03% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.133, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 4.133, 0, 0, 1);
-  }
-  27.23% {
-    -webkit-transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-    transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 2.352, 0, 0, 1);
-  }
-  27.88% {
-    -webkit-transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1.934, 0, 0, 1);
-    transform: matrix3d(1.003, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1.934, 0, 0, 1);
-  }
-  37.54% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.307, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.307, 0, 0, 1);
-  }
-  38.34% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.311, 0, 0, 1);
-  }
-  40.39% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.285, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.285, 0, 0, 1);
-  }
-  50% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, -0.048, 0, 0, 1);
-  }
-  60.56% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0.007, 0, 0, 1);
-  }
-  82.78% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-  }
-  100% {
-    -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-  }
-}*/
 
 .open > .dropdown-menu {
   min-width: 100% !important;
@@ -794,11 +620,21 @@ fieldset {
 }
 
 .carousel-indicators {
-  z-index: 3 !important;
+  z-index: 1 !important;
 }
 
 .navbar-static-top {
   z-index: 5 !important;
+  a{
+    @include transition(0.35s);
+  }
+  li{
+    @include transition(0.35s);
+    &:hover{
+      background-color: rgba(0, 0, 0, 0.82) !important;
+      cursor: pointer !important;
+    }
+  }
 }
 
 div#jivo-iframe-container {
