--- a/wp-content/themes/stolar/dev/css/_swipebox.scss
+++ b/wp-content/themes/stolar/dev/css/_swipebox.scss
@@ -30,7 +30,7 @@ html.swipebox-html.swipebox-touch {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999!important;
+  z-index: 9999 !important;
   overflow: hidden;
   user-select: none;
 }
@@ -67,7 +67,7 @@ html.swipebox-html.swipebox-touch {
       margin-right: -1px;
     }
 
-    img{
+    img {
       @include shadow(2);
       border-radius: 4px;
     }
@@ -110,7 +110,7 @@ html.swipebox-html.swipebox-touch {
   }
 
   .slide-loading {
-    background: url(../images/loader.gif) no-repeat center center;
+    background: url(#{$path-to-images}/loader.gif) no-repeat center center;
   }
 
 }
@@ -150,7 +150,7 @@ html.swipebox-html.swipebox-touch {
 #swipebox-prev,
 #swipebox-next,
 #swipebox-close {
-  background: url(../images/icons.png) no-repeat;
+  background: url(#{$path-to-images}/icons.png) no-repeat;
   border: none !important;
   text-decoration: none !important;
   cursor: pointer;
@@ -295,7 +295,7 @@ html.swipebox-html.swipebox-touch {
 #swipebox-top-bar {
   text-shadow: 1px 1px 1px black;
   background: #555;
-  opacity:1;
+  opacity: 1;
   @include shadow(1);
 }
 
