--- a/wp-content/themes/stolar/dev/css/style.scss
+++ b/wp-content/themes/stolar/dev/css/style.scss
@@ -29,7 +29,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "swipebox";
 @import "aside";
 @import "profile";
-@import "yamm";
+@import "yamn";
 
 html, body {
   height: 100%;
@@ -64,112 +64,8 @@ article {
   color: white;
 }
 
-#special_color h3 {
-  color: gray;
-}
-
-.templatemo_block h2 {
-  font-size: 30px;
-  color: whitesmoke;
-}
-
-.templatemo_block p {
-  font-size: 15px;
-  color: white;
-}
-
-.color_header {
-  background-color: #44946E;
-}
-
 .padding_bottom {
   padding: 0 0 20px 0;
-}
-
-#color_green {
-  background-color: #22B473;
-}
-
-#color_orange {
-  background-color: #333333;
-}
-
-#color_blue {
-  background-color: #4495CC;
-}
-
-#color_dark-blue {
-  background-color: #488EA3;
-}
-
-#color_navi {
-  background-color: #435a6b;
-}
-
-#color_yellow {
-  background-color: #f19f0f;
-}
-
-#color_jungle {
-  background-color: #509D85;
-}
-
-#color_sand {
-  background-color: #C7C1A6;
-}
-
-.distance {
-  margin: -10px 0 0 0;
-}
-
-.jumbotron {
-  padding: 0;
-  background: #f3efe0;
-}
-
-.span_color_green span {
-  background: #398F69 !important;
-}
-
-.span_color_green a::before {
-  color: #0f7c67 !important;
-}
-
-.span_color_orange span {
-  border: 3px solid #fff !important;
-}
-
-.span_color_orange a::before {
-  color: #5F5F5F !important;
-}
-
-.span_color_blue span {
-  background: #33709A !important;
-}
-
-.span_color_blue a::before {
-  color: #377AA7 !important;
-}
-
-.span_color_navi span {
-  background: #334654 !important;
-}
-
-.span_color_navi a::before {
-  color: #31424F !important;
-}
-
-.span_color_yellow span {
-  background: #B77C14 !important;
-}
-
-.span_color_yellow a::before {
-  color: #CE880C !important;
-}
-
-.round_2 a::before,
-.round_2 a::after {
-  padding-right: 100px !important;
 }
 
 .row {
@@ -277,28 +173,8 @@ article {
   font-size: 1.2em;
 }
 
-@media only screen and (min-width: 766px) and (max-width: 991px) {
-  .navbar-right {
-    font-size: 1em;
-  }
-}
-
 fieldset {
   color: gray;
-}
-
-.vertical-menu {
-  margin-top: 2%;
-}
-
-.vertical-menu a {
-  color: #65BC7C;
-}
-
-.animation-target-button {
-  -webkit-animation: animation-button 2000ms linear both;
-  animation: animation-button 2000ms linear both;
-
 }
 
 .category-header {
@@ -312,10 +188,6 @@ fieldset {
 
 .gallery-text {
   color: white;
-}
-
-.dropdown-menu > li > a {
-  font-size: 1.2em;
 }
 
 @media(min-width: 600px) and (max-width: 992px) {
@@ -332,10 +204,6 @@ fieldset {
   positon: absolute;
   z-index: 100;
   top: 0;
-}
-
-.last-container-with-photo {
-  padding-bottom: 3% !important;
 }
 
 .modal-open {
@@ -364,110 +232,11 @@ fieldset {
   touch-action: none;
 }
 
-/* SLIMBOX */
-
-#lbOverlay {
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  cursor: pointer;
-}
-
-#lbCenter, #lbBottomContainer {
-  position: absolute;
-  z-index: 9999;
-  overflow: hidden;
-  background-color: #fff;
-}
-
-.lbLoading {
-  background: #fff url(#{$path-to-images}/loading.gif) no-repeat center;
-}
-
-#lbImage {
-  position: absolute;
-  left: 0;
-  top: 0;
-  border: 10px solid #fff;
-  background-repeat: no-repeat;
-}
-
-#lbPrevLink, #lbNextLink {
-  display: block;
-  position: absolute;
-  top: 0;
-  width: 50%;
-  outline: none;
-}
-
-#lbPrevLink {
-  left: 0;
-}
-
-#lbPrevLink:hover {
-  background: transparent url(#{$path-to-images}/prevlabel.gif) no-repeat 0 15%;
-}
-
-#lbNextLink {
-  right: 0;
-}
-
-#lbNextLink:hover {
-  background: transparent url(#{$path-to-images}/nextlabel.gif) no-repeat 100% 15%;
-}
-
-#lbBottom {
-  font-size: 10px;
-  color: #666;
-  line-height: 1.4em;
-  text-align: left;
-  border: 10px solid #fff;
-  border-top-style: none;
-}
-
-#lbCloseLink {
-  display: block;
-  float: right;
-  width: 66px;
-  height: 22px;
-  background: transparent url(#{$path-to-images}/closelabel.gif) no-repeat center;
-  margin: 5px 0;
-  outline: none;
-}
-
-#lbCaption, #lbNumber {
-  margin-right: 71px;
-}
-
-#lbCaption {
-  font-weight: bold;
-}
-
 .advantages {
   margin: 30px auto;
 
   .item {
     @include shadow(1);
-  }
-}
-
-.footer-elements {
-  display: flex;
-  justify-content: space-between;
-
-  .left {
-    margin-top: 20px;
-  }
-  .right {
-    margin: 8px 0;
-
-    .fa {
-      margin-left: 8px;
-    }
   }
 }
 
@@ -492,20 +261,6 @@ fieldset {
       background-color: lighten($main-green, 5%);
       border: none;
     }
-  }
-  &-info {
-    border: none;
-    background: lighten($main-green, 12%);
-
-    &:hover {
-      background: lighten($main-green, 5%);
-    }
-  }
-}
-
-.templatemo_reasonbg {
-  .fa {
-
   }
 }
 
@@ -612,6 +367,22 @@ footer {
     color: lighten($main-green, 20%);
     &:hover {
       color: lighten($main-green, 5%);
+    }
+  }
+
+  .footer-elements {
+    display: flex;
+    justify-content: space-between;
+
+    .left {
+      margin-top: 20px;
+    }
+    .right {
+      margin: 8px 0;
+
+      .fa {
+        margin-left: 8px;
+      }
     }
   }
 }
